Fix z-index

--- a/src/styles/CChat.scss
+++ b/src/styles/CChat.scss
@@ -25,7 +25,7 @@
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.864);
-    z-index: 44;
+    z-index: 300;
   }
   &__loader{
     position: relative;
@@ -185,7 +185,7 @@
     top: 0;
     width: 100vw;
     background-color: #fff;
-    z-index: 44;
+    z-index: 300;
     box-shadow: 0 0 10px 0px rgba(133, 133, 133, 0.493);
     transition: top 0.3s linear;
   }
@@ -335,7 +335,7 @@
     bottom: 0;
     background-color: #f6f6f6;
     padding: 10px 0;
-    z-index: 44;
+    z-index: 300;
     box-shadow: 0 0 10px 0px rgba(133, 133, 133, 0.493);
     &--chat{
       background-color: transparent;
